--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -1,21 +1,23 @@
 .header-container {
     width: 100%;
-    height: 57px;
+    height: 8vh;
     display: flex;
-    flex-flow: row wrap;
-    background-color: white;
+    flex-flow: row;
+    background-color: gray;
 
     i {
         color: #606060;
     }
 }
 
+
+
 .hamburger-button {
     display: flex;
-    flex-flow: column wrap;
-    margin-left: 25px;
+    flex-flow: column;
     justify-content: center;
     align-items: center;
+    margin: 5px;
 }
 
 .hamburger-button-div {
@@ -29,8 +31,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-flow: column wrap;
-    margin-left: 28px;
+    flex-flow: column;
+    margin: 5px 5px 5px 28px; 
 
 
     img {
@@ -41,14 +43,12 @@
 
 .header-search {
     display: flex;
-    justify-content: center;
     align-items: center;
-    flex-flow: row wrap;
-    margin-left: 170px;
+    flex-flow: row;
 
     input {
-        height: 28px;
-        width: 565px;
+        height: 26px;
+        width: 40vw;
         outline: none;
         border: 1px solid lightgray;
         padding-left: 10px;
@@ -60,14 +60,14 @@
     button {
         display: flex;
         justify-content: center;
-        height: 32px;
+        height: 30px;
         width: 65px;
-        display: flex;
         align-items: center;
         border-left: none;
         border: 1px solid lightgray;
         border-radius: 2px;
         background-color: #f8f8f8;
+        outline: none;
 
         i {
             color: #818181;
@@ -78,33 +78,36 @@
 
 .header-icons {
     display: flex;
-    width: 9%;
+    width: 120px;
     justify-content: space-between;
     align-items: center;
-    flex-flow: row wrap;
-    margin-left: 130px;
+    flex-flow: row;
+    margin: 10px 20px 10px 5px;
+    
 }
 
 .sign-in-button {
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: row;
     justify-content: center;
     align-items: center;
-    width: 8%;
-    margin-left: 20px;
+    width: 110px;
+    margin-top: 7px;
+    margin-bottom: 7px;
 
     button {
         border: 1px solid #065fd4;
-        width: 90%;
+        width: 100%;
+        height: 100%;
         display: flex;
-        flex-flow: row wrap;
+        flex-flow: row;
         justify-content: space-evenly;
         align-items: center;
-        height: 70%;
         border-radius: 2px;
         color: #065fd4;
         background-color: transparent;
         font-weight: bold;
+        outline: none;
 
         i {
             color: #065fd4;
@@ -114,3 +117,28 @@
 
 
 }
+
+.col-1-8 {
+    display: flex;
+    flex-flow: row;
+    width: 150px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 20px;
+}
+
+.col-1-2 {
+    justify-content: center;
+    width: 48vw;
+    margin-left: 10vw;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.col-1-3 {
+    display: flex;
+    flex-flow: row;
+    width: 270px;
+    margin-left: 8vw;
+}
+
