--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -1,15 +1,15 @@
-.header-container {
+.header-container, .regular-search, .responsive-search {
     width: 100%;
     height: 8vh;
     display: flex;
-    flex-flow: row;
-    background-color: gray;
+    align-items: center;
+    justify-content: space-between;
+    background-color: grey;
 
     i {
         color: #606060;
     }
 }
-
 
 
 .hamburger-button {
@@ -44,11 +44,11 @@
 .header-search {
     display: flex;
     align-items: center;
-    flex-flow: row;
+    width: 100%;
 
     input {
         height: 26px;
-        width: 40vw;
+        width: 100%;
         outline: none;
         border: 1px solid lightgray;
         padding-left: 10px;
@@ -61,7 +61,7 @@
         display: flex;
         justify-content: center;
         height: 30px;
-        width: 65px;
+        min-width: 65px;
         align-items: center;
         border-left: none;
         border: 1px solid lightgray;
@@ -78,29 +78,31 @@
 
 .header-icons {
     display: flex;
-    width: 120px;
+    width: 150px;
     justify-content: space-between;
     align-items: center;
-    flex-flow: row;
     margin: 10px 20px 10px 5px;
+
+    .start, .center, .end {
+        margin-right: 25px;
+    }
+
     
 }
 
 .sign-in-button {
     display: flex;
-    flex-flow: row;
     justify-content: center;
     align-items: center;
-    width: 110px;
-    margin-top: 7px;
-    margin-bottom: 7px;
+    min-width: 110px;
+    margin-top: 3px;
+    margin-bottom: 3px;
 
     button {
         border: 1px solid #065fd4;
-        width: 100%;
+        min-width: 100%;
         height: 100%;
         display: flex;
-        flex-flow: row;
         justify-content: space-evenly;
         align-items: center;
         border-radius: 2px;
@@ -120,7 +122,6 @@
 
 .col-1-8 {
     display: flex;
-    flex-flow: row;
     width: 150px;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -128,17 +129,56 @@
 }
 
 .col-1-2 {
+    display: flex;
     justify-content: center;
-    width: 48vw;
-    margin-left: 10vw;
     margin-top: 5px;
     margin-bottom: 5px;
+    padding-left: 20px;
+    padding-right: 20px;
+    width: 47%;
 }
 
 .col-1-3 {
     display: flex;
-    flex-flow: row;
-    width: 270px;
-    margin-left: 8vw;
+    justify-content: space-between;
+    min-width: 300px;
+    margin-right: 20px;
 }
 
+.hidden {
+    visibility: hidden;
+}
+
+@media only screen and (max-width: 655px) {
+    .col-1-2 {
+        visibility: hidden;
+    }
+
+    .search-icon-responsive {
+        visibility: visible;
+        cursor: pointer;
+    }
+
+    .col-1-2 {
+        width: 0%;
+        padding: 0px;
+    }
+
+    .responsive-search {
+        padding-right: 10px;
+        padding-left: 10px;
+        width: 90%;
+    }
+
+    .arrow-back {
+        cursor: pointer;
+        margin-right: 10px;
+    }
+
+}
+
+@media only screen and (min-width: 655px) {
+    .responsive-search {
+        visibility: hidden;
+    }
+}
