--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -4,6 +4,9 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: fixed;
+    top: 0px;
+    left: 0px;
 
     i {
         color: #606060;
