--- a/src/components/content/content.styles.scss
+++ b/src/components/content/content.styles.scss
@@ -24,4 +24,11 @@
     }
 }
 
+.videos-container {
+    margin-left: 30px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+}
+
 
