--- a/src/components/content/content.styles.scss
+++ b/src/components/content/content.styles.scss
@@ -26,6 +26,7 @@
 
 .videos-container {
     margin-left: 30px;
+    width: 95%;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
