--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -13,13 +13,16 @@
     }
 }
 
-
+.header-logo-img {
+    cursor: pointer;
+}
 .hamburger-button {
     display: flex;
     flex-flow: column;
     justify-content: center;
     align-items: center;
     margin: 5px;
+    cursor: pointer;
 }
 
 .hamburger-button-div {
@@ -43,40 +46,6 @@
     }
 }
 
-.header-search {
-    display: flex;
-    align-items: center;
-    width: 100%;
-
-    input {
-        height: 26px;
-        width: 100%;
-        outline: none;
-        border: 1px solid lightgray;
-        padding-left: 10px;
-        font-size: 16px;
-        border-right: none;
-        border-radius: 2px;
-    }
-
-    button {
-        display: flex;
-        justify-content: center;
-        height: 30px;
-        min-width: 65px;
-        align-items: center;
-        border-left: none;
-        border: 1px solid lightgray;
-        border-radius: 2px;
-        background-color: #f8f8f8;
-        outline: none;
-
-        i {
-            color: #818181;
-            font-size: 21px;
-        }
-    }
-}
 
 .header-icons {
     display: flex;
