--- a/src/components/search-bar/search-bar.styles.scss
+++ b/src/components/search-bar/search-bar.styles.scss
@@ -25,6 +25,7 @@
         border-radius: 2px;
         background-color: #f8f8f8;
         outline: none;
+        cursor: pointer;
 
         i {
             color: #818181;
