--- a/src/components/results/results.styles.scss
+++ b/src/components/results/results.styles.scss
@@ -11,4 +11,18 @@
     background-color: #f9f9f9;
     width: 83%;
     overflow-y: scroll;
+    padding-left: 30px;
+    padding-top: 10px;
+}
+
+@media only screen and (max-width: 1335px) {
+  .results {
+    width: 93%;
+  }
+}
+
+@media only screen and (max-width: 808px) {
+  .results {
+    width: 100%;
+  }
 }
