--- a/src/components/content/content.styles.scss
+++ b/src/components/content/content.styles.scss
@@ -4,6 +4,10 @@
     overflow-y: scroll;
 }
 
+.nav-toggle-active-content {
+    width: 93%;
+}
+
 .content-title {
     margin-left: 30px;
     margin-top: 30px;
