--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -99,6 +99,10 @@
     visibility: hidden;
 }
 
+.header-icon {
+    cursor: pointer;
+}
+
 @media only screen and (max-width: 655px) {
     .col-1-2 {
         visibility: hidden;
