home page and results page stylings

--- a/src/components/content/content.styles.scss
+++ b/src/components/content/content.styles.scss
@@ -2,6 +2,7 @@
     background-color: #f9f9f9;
     width: 83%;
     overflow-y: scroll;
+    padding-bottom: 30px;
 }
 
 .nav-toggle-active-content {
