--- a/src/components/results/results.styles.scss
+++ b/src/components/results/results.styles.scss
@@ -13,6 +13,7 @@
     overflow-y: scroll;
     padding-left: 30px;
     padding-top: 10px;
+    padding-bottom: 50px;
 }
 
 @media only screen and (max-width: 1335px) {
