--- a/src/components/watch-page-suggestions/watch-page-suggestions.styles.scss
+++ b/src/components/watch-page-suggestions/watch-page-suggestions.styles.scss
@@ -3,7 +3,8 @@
     margin-right: 100px;
     display: flex;
     flex-flow: column;
-    height: 1080px;  
+    height: 1080px;
+    width: 30%;  
 }
 
 @media only screen and (max-width: 1015px) {
