--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -1,4 +1,4 @@
-.header-container, .regular-search, .responsive-search {
+header, .regular-search, .responsive-search {
     width: 100%;
     height: 8vh;
     display: flex;
