--- a/src/components/content/content.styles.scss
+++ b/src/components/content/content.styles.scss
@@ -56,6 +56,10 @@
     .content {
         width: 93%;
     }
+
+    .no-sidebar-and-screen-size-medium {
+        width: 100% !important;
+    }
 }
 
 @media only screen and (max-width: 808px) {
