--- a/src/components/content/content.styles.scss
+++ b/src/components/content/content.styles.scss
@@ -73,7 +73,7 @@
     width: 95%;
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 
