--- a/src/components/search-result-channel/search-result-channel.styles.scss
+++ b/src/components/search-result-channel/search-result-channel.styles.scss
@@ -29,4 +29,15 @@
 }
 
 
+@media only screen and (max-width: 570px) {
+  .search-result-channel-container {
+    flex-direction: column;
+    padding-left: 0px;
+  }
+  
+  .channel-content {
+    margin-left: 0px;
+    text-align: center;
+  }
 
+}
