--- a/src/components/watch-page-suggestions/watch-page-suggestions.styles.scss
+++ b/src/components/watch-page-suggestions/watch-page-suggestions.styles.scss
@@ -2,7 +2,7 @@
     margin-left: 20px;
     margin-right: 100px;
     display: flex;
-    flex-flow: column;
+    flex-direction: column;
     height: 1080px;
     width: 30%;  
 }
@@ -10,5 +10,6 @@
 @media only screen and (max-width: 1015px) {
     .watch-page-suggestions {
         margin-left: 0px;
+        width: 80%;
     }
 }
