--- a/src/components/watch/watch.styles.scss
+++ b/src/components/watch/watch.styles.scss
@@ -81,5 +81,24 @@
         width: 90%;
     }
 
+}
 
+@media only screen and (max-width: 520px) {
+    .video-details {
+        flex-direction: column;
+    }
+
+    .video-details-right {
+        margin-top: 10px;
+    }
+}
+
+@media only screen and (max-width: 405px) {
+    .video-details-right {
+        flex-direction: column;
+    }
+
+    .video-details-stats {
+        margin-bottom: 5px;
+    }
 }
