--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -1,6 +1,6 @@
 header, .regular-search, .responsive-search {
     width: 100%;
-    height: 8vh;
+    height: 54px;
     display: flex;
     align-items: center;
     justify-content: space-between;
